--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,1 +1,31 @@
-<h1>Hello Node JS</h1>
+<div class="container">
+	<div class="row">
+		{{#if posts}}
+			{{#each posts}}
+			<div class="col-md-6">
+				<div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+					<div class="col p-4 d-flex flex-column position-static">
+						<strong class="d-inline-block mb-2 text-primary">World</strong>
+						<h3 class="mb-0">{{this.title}}</h3>
+						<div class="mb-1 text-muted">{{this.createdAt}}</div>
+						<p class="card-text mb-auto">{{this.summary}}</p>
+						<a href="/post/{{this.slug}}" class="stretched-link">Continue reading</a>
+					</div>
+					<div class="col-auto d-none d-lg-block">
+						<a href="/post/{{this.slug}}">
+							<img src="{{this.image}}" class="bd-placeholder-img" alt="..." style="width: 200;height: 250" />
+						</a>
+					</div>
+				</div>
+			</div>
+		{{/each}}
+		{{else}}
+			<h3>Sorry, no content found</h3>
+		{{/if}}
+	</div>
+	<hr />
+	<div class="mx-auto">
+		<a type="button" href="/post/create" class="btn btn-primary text-center">Create Post</a>
+	</div>
+	<hr />
+</div>
