--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -1,5 +1,6 @@
-<footer class="footer mt-auto py-3 bg-light">
-	<div class="container">
-		<span class="text-muted">Place sticky footer content here.</span>
-	</div>
+<footer class="blog-footer mt-auto">
+  <p>Blog template built for <a href="https://getbootstrap.com/">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+  <p>
+    <a href="#">Back to top</a>
+  </p>
 </footer>
