--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,26 +1,35 @@
-<header class="p-3 bg-dark text-white">
-	<div class="container">
-		<div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-			<a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-				<svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap" /></svg>
+<header class="blog-header py-3">
+	<div class="row flex-nowrap justify-content-between align-items-center">
+		<div class="col-4 pt-1">
+			<a class="link-secondary" href="#">Subscribe</a>
+		</div>
+		<div class="col-4 text-center">
+			<a class="blog-header-logo text-dark" href="/">Large</a>
+		</div>
+		<div class="col-4 d-flex justify-content-end align-items-center">
+			<a class="link-secondary" href="/" aria-label="Search">
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					width="20"
+					height="20"
+					fill="none"
+					stroke="currentColor"
+					stroke-linecap="round"
+					stroke-linejoin="round"
+					stroke-width="2"
+					class="mx-3"
+					role="img"
+					viewBox="0 0 24 24"
+				><title>Search</title><circle cx="10.5" cy="10.5" r="7.5" /><path d="M21 21l-5.2-5.2" /></svg>
 			</a>
-
-			<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-				<li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-				<li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-				<li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-				<li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-				<li><a href="#" class="nav-link px-2 text-white">About</a></li>
-			</ul>
-
-			<form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3" action="/search" method="POST">
-				<input type="search" class="form-control form-control-dark" name="q" placeholder="Search..." aria-label="Search" />
-			</form>
-
-			<div class="text-end">
-				<button type="button" class="btn btn-outline-light me-2">Login</button>
-				<button type="button" class="btn btn-warning">Sign-up</button>
-			</div>
+			<a class="btn btn-sm btn-outline-secondary" href="/">Sign up</a>
 		</div>
 	</div>
 </header>
+
+<div class="nav-scroller py-1 mb-2">
+	<nav class="nav d-flex justify-content-between">
+		<a class="p-2 link-secondary" href="/post">All Post</a>
+		<a class="p-2 link-secondary" href="/post/create">New Post</a>
+	</nav>
+</div>
